--- a/templates/create_padavan.html
+++ b/templates/create_padavan.html
@@ -1,6 +1,7 @@
 {% extends "extends/base.html" %}{% load i18n %}{% load static %}
 {% block body %}
-<form method="post" data-regions-url="{% url 'main:create_padavan' %}" novalidate> <!-- necessary -->
+<a href="{{ request.META.HTTP_REFERER }}">{% trans 'Назад' %}</a>
+<a href="{% url 'main:index' %}">{% trans 'На главную' %}</a>
+{% csrf_token %}
     {% include 'includes/uni_form.html' %}
-</form>
 {% endblock %}
