--- a/templates/includes/uni_form.html
+++ b/templates/includes/uni_form.html
@@ -7,7 +7,7 @@
 
             <p>{{ form }}</p>
 
-        <input name="q" type="submit" value="{{ form.button_label }}">
+        <input type="submit" value="{{ form.button_label }}">
     </div>
 </form>
 {% endif %}
