--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,10 @@
 {% extends "extends/base.html" %}{% load i18n %}{% load static %}
 {% block body %}
     <title>Welcome to Jedi Academy!</title>
-    <div class="text-center"></div>
-    </p><a href="{% url 'main:index' %}">{% trans 'Index referrer' %}</a></p>
-    <p><a href="{% url 'main:create_padavan' %}">{% trans 'Padavan form' %}</a></p>
-    <p><a href="{% url 'main:create_jedi' %}">{% trans 'Jedi form' %}</a></p>
-
+    <div class="text-center">
+    </p><a href="{% url 'main:index' %}">{% trans 'Главная страница' %}</a></p>
+    <p><a href="{% url 'main:create_padawan' %}">{% trans 'Для кандидатов' %}</a></p>
+    <p><a href="{% url 'main:create_jedi' %}">{% trans 'Для Джедаев' %}</a></p>
+{#    <p><a href="{% url 'main:task' participant_id %}">{% trans 'Задание для кандидатов' %}</a></p>#}
+    </div>
 {% endblock %}
