--- a/templates/extends/base.html
+++ b/templates/extends/base.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <title>
-{% trans 'Wine database site' %}
+{% trans 'Welcome to Jedi academy' %}
     </title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
     <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
