--- a/templates/task.html
+++ b/templates/task.html
@@ -2,7 +2,7 @@
 {% block body %}
 <a href="{{ request.META.HTTP_REFERER }}">{% trans 'Назад' %}</a>
 <a href="{% url 'main:index' %}">{% trans 'На главную' %}</a>
-<form method="post" action="{% url 'main:create_jedi' %}"> <!-- necessary -->
+{% csrf_token %}
     {% include 'includes/uni_form.html' %}
-</form>
+    {{ object }}
 {% endblock %}
