--- a/templates/extends/base.html
+++ b/templates/extends/base.html
@@ -12,6 +12,8 @@
 </head>
 <body>
 {% block head %}
+    <a href="{{ request.META.HTTP_REFERER }}">{% trans 'Назад' %}</a>
+    <a href="{% url 'main:index' %}">{% trans 'На главную' %}</a>
 {% endblock %}
 
 {% block body %}
