--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <div class="text-center">
     </p><a href="{% url 'main:index' %}">{% trans 'Главная страница' %}</a></p>
     <p><a href="{% url 'main:create_padawan' %}">{% trans 'Для кандидатов' %}</a></p>
-{#    <p><a href="{% url 'main:create_jedi' %}">{% trans 'Для Джедаев' %}</a></p>#}
+    <p><a href="{% url 'main:create_jedi' %}">{% trans 'Добавить Джедая' %}</a></p>
     <p><a href="{% url 'main:choose_jedi' %}">{% trans 'Выбрать своего падавана...' %}</a></p>
     </div>
 {% endblock %}
