--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     </p><a href="{% url 'main:index' %}">{% trans 'Главная страница' %}</a></p>
     <p><a href="{% url 'main:create_padawan' %}">{% trans 'Для кандидатов' %}</a></p>
     <p><a href="{% url 'main:create_jedi' %}">{% trans 'Добавить Джедая' %}</a></p>
-    <p><a href="{% url 'main:choose_jedi' %}">{% trans 'Выбрать своего падавана...' %}</a></p>
+    <p><a class="red" href="{% url 'main:choose_jedi' %}">{% trans 'Выбрать своего падавана...' %}</a></p>
     <p>Дополнительно:</p>
     <p><a href="{% url 'main:jedi_list' %}">{% trans 'Список Джедаев' %}</a></p>
     </div>
