Task text added

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,4 +11,31 @@
     <p>Дополнительно:</p>
     <p><a href="{% url 'main:jedi_list' %}">{% trans 'Список Джедаев' %}</a></p>
     </div>
+<div style="white-space: pre-wrap; font-size: 14px">
+<strong>Кадровая служба(далее Система) осуществляет:</strong>
+&bull; поиск и&nbsp;учет кандидатов на&nbsp;планетах;
+&bull; отбор кандидатов по&nbsp;средствам вступительных испытаний;
+&bull; оповещение кандидатов о&nbsp;результатах вступительных испытаний и&nbsp;зачисление их&nbsp;в&nbsp;орден.
+<strong>Система содержит сущности:</strong>
+&bull; Кандидат (Имя, Планета обитания, Возраст, Email);
+&bull; Джедай (Имя, Планета на&nbsp;которой он&nbsp;обучает);
+&bull; Планета (Наименование);
+&bull; Тестовое испытание падавана (уникальный код ордена, список вопросов).
+Такие сущности как Джедай&nbsp;/ Планета&nbsp;/ Тестовое испытание падавана заводятся в&nbsp;систему через админку.
+На&nbsp;главной странице системы нужно отображен выбор:
+Для Джедаев&nbsp;| Для кандидатов
+Если пользователь выбрал &laquo;Для кандидатов&raquo;, то&nbsp;ему отображается форма, в&nbsp;которой он&nbsp;укажет свою планету обитания, укажет свои данные и&nbsp;нажмет &laquo;Далее&raquo;.
+Новый кандидат сохраняется в&nbsp;БД, далее ему отображаются вопросы испытания, на&nbsp;которые нужно дать ответы (список вопросов меняется время от&nbsp;времени.
+
+Если пользователь выбрал &laquo;Для Джедаев&raquo;, то&nbsp;ему отображается форма, в&nbsp;которой он&nbsp;выберет себя из&nbsp;списка Джедаев.
+Далее ему отображается список кандидатов, прошедших тест на&nbsp;его планете, но&nbsp;еще не&nbsp;ставших падаванами.
+Джедай может посмотреть ответы каждого кандидата.
+Если ответы кандидата устраивают Джедая, он&nbsp;может зачислить его к&nbsp;себе в&nbsp;падаваны.
+Если кандидат зачислен в&nbsp;падаваны, ему отправляется уведомление по&nbsp;почте.
+
+Есть ограничение на&nbsp;количество падаванов у&nbsp;одного Джедая (не&nbsp;более 3-х);
+Дополнительно выведен полный список Джедаев в&nbsp;котором для каждого джедая указано количество его падаванов;
+Выведены все Джедаи, у&nbsp;которых более одного падавана.
+</div>
+
 {% endblock %}
