Task text added

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
 &bull; Планета (Наименование);
 &bull; Тестовое испытание падавана (уникальный код ордена, список вопросов).
 Такие сущности как Джедай&nbsp;/ Планета&nbsp;/ Тестовое испытание падавана заводятся в&nbsp;систему через админку.
-На&nbsp;главной странице системы нужно отображен выбор:
+На&nbsp;главной странице системы отображен выбор:
 Для Джедаев&nbsp;| Для кандидатов
 Если пользователь выбрал &laquo;Для кандидатов&raquo;, то&nbsp;ему отображается форма, в&nbsp;которой он&nbsp;укажет свою планету обитания, укажет свои данные и&nbsp;нажмет &laquo;Далее&raquo;.
 Новый кандидат сохраняется в&nbsp;БД, далее ему отображаются вопросы испытания, на&nbsp;которые нужно дать ответы (список вопросов меняется время от&nbsp;времени.
